# bazel-res-issue

./: .gitignore  README.md  WORKSPACE
lib/: BUILD.bazel
lib/src/main/kotlin/examples/android/lib/: MainActivity.kt  TestClass.kt
lib/src/main/res/values/: strings.xml
