load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "lib",
    srcs = [
        "src/main/kotlin/examples/android/lib/MainActivity.kt"
    ],
    custom_package = "examples.android.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "//lib:data2",
        "//lib:res_generated_lib",
        "@maven//:androidx_appcompat_appcompat",
    ],
)

kt_android_library(
    name = "data2",
    srcs = [
        "src/main/kotlin/examples/android/lib/TestClass.kt"
    ],
    custom_package = "examples.android.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:androidx_appcompat_appcompat",
    ],
)

android_library(
    name = "res_generated_lib",
    custom_package = "examples.android.lib",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
)

